# tranx

./: Cargo.toml  README.md  appdev.sh  nginx.conf  proxy.Dockerfile  proxy.sh  techstack.md  techstack.yml
app/: main.rs  model.rs  routes.rs  views.rs
src/: model.rs  routes.rs
static/: style.css
templates/: greet.html  layout.html
templates/components/: comments.html  counter.html  post_comment.html  read_comments.html
templates/pages/: greet.html
