[package]
name = "trax"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
lazy_static = "1.4.0"
tera = "1.19.1"
tokio = { version = "1.34.0", features=["full"] }

[[bin]]
name = "app"
path = "app/main.rs"
